ref: change tooltip return to List.of