@@ -41,7 +41,7 @@ public class ItemWirelessRemoteControl extends CustomItem {
     @Override
     public List<String> getTooltip(ItemStack stack) {
         Data d = new Data(stack);
-        return Collections.singletonList(d.linked == null ?
+        return List.of(d.linked == null ?
                 GuiText.REMOTE_CONTROL_NOT_LINKED_TOOLTIP.toString() :
                     GuiText.REMOTE_CONTROL_LINKED_TOOLTIP.toString(d.linked));
     }
